--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "react-apollo": "3.1.3",
     "react-autosuggest": "^9.4.3",
     "react-dom": "16.12.0",
-    "react-markdown": "^4.2.2",
+    "react-markdown": "4.3.1",
     "scriptjs": "2.5.9",
     "twix": "^1.3.0",
     "typescript": "^3.7.2",
