--- a/.env.sample
+++ b/.env.sample
@@ -1,23 +1,23 @@
-OAUTH_APP_ID=
-OAUTH_APP_PASSWORD=
-OAUTH_REDIRECT_URI=http://localhost:3000/auth/callback
+OAUTH_APP_ID=##Insert GUID##
+OAUTH_APP_PASSWORD=##Insert Password##
+AZURE_STORAGE_CONNECTION_STRING=##Insert CS##
+SESSION_SIGNING_KEY=##Insert Key##
+OAUTH_REDIRECT_URI=http://localhost:8080/auth/callback
 OAUTH_SCOPES=profile offline_access user.read calendars.read
 OAUTH_AUTHORITY=https://login.microsoftonline.com/common
 OAUTH_ID_METADATA=/v2.0/.well-known/openid-configuration
 OAUTH_AUTHORIZE_ENDPOINT=/oauth2/v2.0/authorize
 OAUTH_TOKEN_ENDPOINT=/oauth2/v2.0/token
-AZURE_STORAGE_CONNECTION_STRING=
-SESSION_SIGNING_KEY=
-AZURE_STORAGE_PROJECTS_TABLE_NAME=
-AZURE_STORAGE_CUSTOMERS_TABLE_NAME=
-AZURE_STORAGE_CONFIRMEDTIMEENTRIES_TABLE_NAME=
-AZURE_STORAGE_SUBSCRIPTIONS_TABLE_NAME=
-AZURE_STORAGE_SESSIONS_TABLE_NAME=
-AZURE_STORAGE_USERS_TABLE_NAME=
+AZURE_STORAGE_PROJECTS_TABLE_NAME=Projects
+AZURE_STORAGE_CUSTOMERS_TABLE_NAME=Customers
+AZURE_STORAGE_CONFIRMEDTIMEENTRIES_TABLE_NAME=ConfirmedTimeEntries
+AZURE_STORAGE_SUBSCRIPTIONS_TABLE_NAME=Subscriptions
+AZURE_STORAGE_SESSIONS_TABLE_NAME=Sessions
+AZURE_STORAGE_USERS_TABLE_NAME=Users
 PORT=8080
 NODE_ENV=development
 GRAPHIQL_ENABLED=1
 OAUTH_RESPONSE_TYPE=code id_token
 OAUTH_RESPONSE_MODE=form_post
-OAUTH_SIGNIN_PROMPT=login
-DEBUG=*
+OAUTH_SIGNIN_PROMPT=select_account
+DEBUG=services*|middleware*
