--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,7 @@
         "views": false,
         "services": false,
         ".env": false,
-        "server.js": true,
-        "public/js": true,
-        "public/css": true
+        "server.js": true
     },
     "appService.defaultWebAppToDeploy": "/subscriptions/b5e5e285-a57a-4593-a2ef-221dc037ac9f/resourceGroups/pzl-did/providers/Microsoft.Web/sites/did365",
     "appService.deploySubpath": "",
