Revert "Feature/kudu deployment script (#139)"
This reverts commit daf2cf69aae12d6ab47a091aea67aaac6538c2ad.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,9 @@
         "views": false,
         "services": false,
         ".env": false,
-        "server.js": true
+        "server.js": true,
+        "public/js": true,
+        "public/css": true
     },
     "appService.defaultWebAppToDeploy": "/subscriptions/b5e5e285-a57a-4593-a2ef-221dc037ac9f/resourceGroups/pzl-did/providers/Microsoft.Web/sites/did365",
     "appService.deploySubpath": "",
