--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "string-strip-html": "4.3.8",
     "supports-color": "^7.1.0",
     "underscore": "^1.9.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@apollo/react-hooks": "3.1.3",
@@ -66,6 +67,7 @@
     "@types/scriptjs": "0.0.2",
     "@types/underscore": "^1.9.4",
     "@types/underscore.string": "^0.0.38",
+    "@types/validator": "^12.0.1",
     "@types/webpack-env": "1.14.1",
     "@uifabric/icons": "7.3.0",
     "@uifabric/utilities": "^7.6.0",
