--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport": "0.4.0",
     "passport-azure-ad": "4.2.0",
     "pino": "^5.14.0",
+    "react-color": "^2.18.0",
     "simple-oauth2": "2.4.0",
     "string-format": "^2.0.0",
     "string-similarity": "^3.0.0",
