Initial Azure Application Insights setup with tracking of page views

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,4 @@ OAUTH_RESPONSE_TYPE=code id_token
 OAUTH_RESPONSE_MODE=form_post
 OAUTH_SIGNIN_PROMPT=select_account
 DEBUG=services*|middleware*
+AZURE_APPLICATION_INSIGHTS_INSTRUMENTATION_KEY=aff89115-e6b0-4bdd-be1a-3f15cb9c6668
