--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "clean": "rimraf ./lib && rimraf ./public/js"
     },
     "dependencies": {
+        "@microsoft/applicationinsights-web": "2.5.0",
         "@microsoft/microsoft-graph-client": "2.0.0",
         "@pnp/common": "1.3.7",
         "@types/react-autosuggest": "^9.3.13",
