--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         "highcharts-react-official": "3.0.0",
         "http-errors": "1.7.3",
         "i18next": "^19.3.4",
-        "loglevel": "1.6.8",
+        "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
         "morgan": "1.10.0",
@@ -79,10 +79,10 @@
         "validator": "^13.0.0"
     },
     "devDependencies": {
-        "@apollo/react-hooks": "3.1.5",
+        "@apollo/react-hooks": "3.1.3",
         "@babel/compat-data": "^7.8.0",
-        "@babel/core": "7.9.0",
-        "@babel/preset-env": "7.8.7",
+        "@babel/core": "7.8.6",
+        "@babel/preset-env": "^7.8.0",
         "@types/autosuggest-highlight": "^3.1.0",
         "@types/get-value": "^3.0.1",
         "@types/react": "16.9.34",
@@ -107,5 +107,8 @@
         "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
         "webpackbar": "4.0.0"
+    },
+    "resolutions": {
+        "@babel/preset-env": "^7.8.0"
     }
 }
