--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "highcharts": "8.0.2",
         "highcharts-react-official": "3.0.0",
         "http-errors": "1.7.3",
+        "i18next": "^19.3.4",
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
@@ -79,8 +80,9 @@
     },
     "devDependencies": {
         "@apollo/react-hooks": "3.1.3",
+        "@babel/compat-data": "^7.8.0",
         "@babel/core": "7.8.6",
-        "@babel/preset-env": "7.8.6",
+        "@babel/preset-env": "^7.8.0",
         "@types/autosuggest-highlight": "^3.1.0",
         "@types/get-value": "^3.0.1",
         "@types/react": "16.9.23",
@@ -105,5 +107,8 @@
         "webpack": "4.42.0",
         "webpack-cli": "3.3.11",
         "webpackbar": "4.0.0"
+    },
+    "resolutions": {
+        "@babel/preset-env": "^7.8.0"
     }
 }
