Updated npm packages

--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
         "clean": "rimraf ./lib && rimraf ./public/js"
     },
     "dependencies": {
-        "@microsoft/applicationinsights-web": "2.5.0",
+        "@microsoft/applicationinsights-web": "2.5.4",
         "@microsoft/microsoft-graph-client": "2.0.0",
-        "@pnp/common": "1.3.7",
+        "@pnp/common": "2.0.4",
         "@types/react-autosuggest": "^9.3.13",
         "apollo-cache": "1.3.4",
         "apollo-cache-inmemory": "1.6.5",
         "apollo-client": "2.6.8",
         "apollo-link": "^1.2.13",
-        "apollo-link-http": "1.5.16",
+        "apollo-link-http": "1.5.17",
         "apollo-utilities": "1.3.3",
         "array-sort": "^1.0.0",
         "autosuggest-highlight": "3.1.1",
         "azure-storage": "2.10.3",
-        "chalk": "3.0.0",
+        "chalk": "4.0.0",
         "connect-azuretables": "1.0.20",
         "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
@@ -41,74 +41,71 @@
         "express-favicon": "^2.0.1",
         "express-graphql": "0.9.0",
         "express-pino-logger": "^4.0.0",
-        "express-session": "1.17.0",
+        "express-session": "1.17.1",
         "get-value": "3.0.1",
-        "graphql": "14.6.0",
-        "graphql-import": "0.7.1",
+        "graphql": "15.0.0",
+        "graphql-import": "1.0.2",
         "graphql-tag": "2.10.3",
-        "graphql-tools": "4.0.7",
-        "hbs": "4.1.0",
+        "graphql-tools": "5.0.0",
+        "hbs": "4.1.1",
         "helmet": "^3.21.2",
-        "highcharts": "8.0.2",
+        "highcharts": "8.0.4",
         "highcharts-react-official": "3.0.0",
         "http-errors": "1.7.3",
         "i18next": "^19.3.4",
-        "loglevel": "1.6.7",
+        "loglevel": "1.6.8",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
-        "morgan": "1.9.1",
+        "morgan": "1.10.0",
         "node-fetch": "2.6.0",
-        "office-ui-fabric-react": "7.98.4",
+        "office-ui-fabric-react": "7.106.3",
         "passport": "0.4.1",
         "passport-azure-ad": "4.2.1",
-        "pino": "^5.14.0",
-        "react": "16.13.0",
-        "react-apollo": "3.1.3",
-        "react-autosuggest": "^9.4.3",
-        "react-dom": "16.13.0",
+        "pino": "^6.2.0",
+        "react": "16.13.1",
+        "react-apollo": "3.1.5",
+        "react-autosuggest": "^10.0.0",
+        "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
         "string-format": "^2.0.0",
         "string-similarity": "^4.0.1",
-        "string-strip-html": "4.3.16",
+        "string-strip-html": "4.3.20",
         "supports-color": "^7.1.0",
         "twix": "^1.3.0",
         "underscore": "^1.9.1",
         "uuid": "^7.0.2",
-        "validator": "^12.2.0"
+        "validator": "^13.0.0"
     },
     "devDependencies": {
-        "@apollo/react-hooks": "3.1.3",
+        "@apollo/react-hooks": "3.1.5",
         "@babel/compat-data": "^7.8.0",
-        "@babel/core": "7.8.6",
-        "@babel/preset-env": "^7.8.0",
+        "@babel/core": "7.9.0",
+        "@babel/preset-env": "7.8.7",
         "@types/autosuggest-highlight": "^3.1.0",
         "@types/get-value": "^3.0.1",
-        "@types/react": "16.9.23",
+        "@types/react": "16.9.34",
         "@types/react-autocomplete": "^1.8.5",
-        "@types/react-dom": "16.9.5",
+        "@types/react-dom": "16.9.6",
         "@types/scriptjs": "0.0.2",
         "@types/underscore": "^1.9.4",
         "@types/underscore.string": "^0.0.38",
-        "@types/validator": "^12.0.1",
+        "@types/validator": "^13.0.0",
         "@types/webpack-env": "1.15.1",
-        "@uifabric/icons": "7.3.14",
+        "@uifabric/icons": "7.3.27",
         "@uifabric/utilities": "^7.6.0",
-        "babel-loader": "8.0.6",
+        "babel-loader": "8.1.0",
         "concurrently": "5.1.0",
-        "core-js": "3.6.4",
+        "core-js": "3.6.5",
         "node-sass": "4.13.1",
-        "nodemon": "2.0.2",
+        "nodemon": "2.0.3",
         "onchange": "6.1.0",
-        "regenerator-runtime": "0.13.3",
+        "regenerator-runtime": "0.13.5",
         "typescript": "3.8.3",
         "underscore.string": "3.3.5",
-        "webpack": "4.42.0",
+        "webpack": "4.42.1",
         "webpack-cli": "3.3.11",
         "webpackbar": "4.0.0"
-    },
-    "resolutions": {
-        "@babel/preset-env": "^7.8.0"
     }
 }
