--- a/package.json
+++ b/package.json
@@ -21,38 +21,38 @@
         "@microsoft/applicationinsights-web": "2.5.4",
         "@microsoft/microsoft-graph-client": "2.0.0",
         "@pnp/common": "2.0.4",
-        "@types/react-autosuggest": "^9.3.13",
+        "@types/react-autosuggest": "9.3.13",
         "apollo-cache": "1.3.4",
         "apollo-cache-inmemory": "1.6.5",
         "apollo-client": "2.6.8",
-        "apollo-link": "^1.2.13",
+        "apollo-link": "1.2.13",
         "apollo-link-http": "1.5.17",
         "apollo-utilities": "1.3.3",
-        "array-sort": "^1.0.0",
+        "array-sort": "1.0.0",
         "autosuggest-highlight": "3.1.1",
         "azure-storage": "2.10.3",
         "chalk": "4.0.0",
         "connect-azuretables": "1.0.20",
         "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
-        "debug": "^4.1.1",
+        "debug": "4.1.1",
         "dotenv": "8.2.0",
         "express": "4.17.1",
-        "express-favicon": "^2.0.1",
-        "express-graphql": "0.9.0",
-        "express-pino-logger": "^4.0.0",
+        "express-favicon": "2.0.1",
+        "express-graphql": "0.8.0",
+        "express-pino-logger": "4.0.0",
         "express-session": "1.17.1",
         "get-value": "3.0.1",
-        "graphql": "15.0.0",
+        "graphql": "14.3.1",
         "graphql-import": "1.0.2",
         "graphql-tag": "2.10.3",
         "graphql-tools": "5.0.0",
         "hbs": "4.1.1",
-        "helmet": "^3.21.2",
+        "helmet": "3.21.2",
         "highcharts": "8.0.4",
         "highcharts-react-official": "3.0.0",
         "http-errors": "1.7.3",
-        "i18next": "^19.3.4",
+        "i18next": "19.3.4",
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
@@ -61,40 +61,40 @@
         "office-ui-fabric-react": "7.106.3",
         "passport": "0.4.1",
         "passport-azure-ad": "4.2.1",
-        "pino": "^6.2.0",
+        "pino": "6.2.0",
         "react": "16.13.1",
         "react-apollo": "3.1.5",
-        "react-autosuggest": "^10.0.0",
+        "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
-        "string-format": "^2.0.0",
-        "string-similarity": "^4.0.1",
+        "string-format": "2.0.0",
+        "string-similarity": "4.0.1",
         "string-strip-html": "4.3.20",
-        "supports-color": "^7.1.0",
-        "twix": "^1.3.0",
-        "underscore": "^1.9.1",
-        "uuid": "^7.0.2",
-        "validator": "^13.0.0"
+        "supports-color": "7.1.0",
+        "twix": "1.3.0",
+        "underscore": "1.9.1",
+        "uuid": "7.0.2",
+        "validator": "13.0.0"
     },
     "devDependencies": {
         "@apollo/react-hooks": "3.1.3",
-        "@babel/compat-data": "^7.8.0",
+        "@babel/compat-data": "7.8.0",
         "@babel/core": "7.8.6",
-        "@babel/preset-env": "^7.8.0",
-        "@types/autosuggest-highlight": "^3.1.0",
-        "@types/get-value": "^3.0.1",
+        "@babel/preset-env": "7.8.0",
+        "@types/autosuggest-highlight": "3.1.0",
+        "@types/get-value": "3.0.1",
         "@types/react": "16.9.34",
-        "@types/react-autocomplete": "^1.8.5",
+        "@types/react-autocomplete": "1.8.5",
         "@types/react-dom": "16.9.6",
         "@types/scriptjs": "0.0.2",
-        "@types/underscore": "^1.9.4",
-        "@types/underscore.string": "^0.0.38",
-        "@types/validator": "^13.0.0",
+        "@types/underscore": "1.9.4",
+        "@types/underscore.string": "0.0.38",
+        "@types/validator": "13.0.0",
         "@types/webpack-env": "1.15.1",
         "@uifabric/icons": "7.3.27",
-        "@uifabric/utilities": "^7.6.0",
+        "@uifabric/utilities": "7.6.0",
         "babel-loader": "8.1.0",
         "concurrently": "5.1.0",
         "core-js": "3.6.5",
@@ -109,6 +109,6 @@
         "webpackbar": "4.0.0"
     },
     "resolutions": {
-        "@babel/preset-env": "^7.8.0"
+        "@babel/preset-env": "7.8.0"
     }
 }
