--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
         "twix": "1.3.0",
         "underscore": "1.9.1",
         "uuid": "7.0.2",
-        "validator": "13.0.0"
+        "validator": "13.0.0",
+        "with-default-props": "^0.2.1"
     },
     "devDependencies": {
         "@apollo/react-hooks": "3.1.3",
