Changing chart library from highcharts to recharts

--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
         "graphql-tools": "5.0.0",
         "hbs": "4.1.1",
         "helmet": "3.21.2",
-        "highcharts": "8.0.4",
-        "highcharts-react-official": "3.0.0",
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
         "loglevel": "1.6.7",
@@ -67,6 +65,7 @@
         "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
+        "recharts": "^1.8.5",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
         "string-format": "2.0.0",
@@ -89,6 +88,7 @@
         "@types/react": "16.9.34",
         "@types/react-autocomplete": "1.8.5",
         "@types/react-dom": "16.9.6",
+        "@types/recharts": "^1.8.10",
         "@types/scriptjs": "0.0.2",
         "@types/underscore": "1.9.4",
         "@types/underscore.string": "0.0.38",
