--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
         "packageClient": "tsc --build && webpack --config webpack.config.js",
-        "watchPackageClient": "onchange -k -i -d 250 \"./client/**/*.ts\" \"./client/**/*.tsx\" -- npm run packageClient",
-        "clean": "rimraf ./lib && rimraf ./public/js"
+        "watchPackageClient": "onchange -k -i -d 250 \"./client/**/*.ts\" \"./client/**/*.tsx\" -- npm run packageClient"
     },
     "dependencies": {
         "@microsoft/applicationinsights-web": "2.5.4",
@@ -76,13 +75,24 @@
         "underscore": "1.9.1",
         "uuid": "7.0.2",
         "validator": "13.0.0",
-        "with-default-props": "^0.2.1"
-    },
-    "devDependencies": {
+        "with-default-props": "^0.2.1",
+        "@uifabric/icons": "7.3.27",
+        "@uifabric/utilities": "7.6.0",
         "@apollo/react-hooks": "3.1.3",
         "@babel/compat-data": "7.8.0",
         "@babel/core": "7.8.6",
         "@babel/preset-env": "7.8.0",
+        "babel-loader": "8.1.0",
+        "concurrently": "5.1.0",
+        "core-js": "3.6.5",
+        "node-sass": "4.13.1",
+        "regenerator-runtime": "0.13.5",
+        "typescript": "3.8.3",
+        "underscore.string": "3.3.5",
+        "webpack": "4.42.1",
+        "webpack-cli": "3.3.11"
+    },
+    "devDependencies": {
         "@types/autosuggest-highlight": "3.1.0",
         "@types/get-value": "3.0.1",
         "@types/react": "16.9.34",
@@ -94,20 +104,9 @@
         "@types/underscore.string": "0.0.38",
         "@types/validator": "13.0.0",
         "@types/webpack-env": "1.15.1",
-        "@uifabric/icons": "7.3.27",
-        "@uifabric/utilities": "7.6.0",
-        "babel-loader": "8.1.0",
-        "concurrently": "5.1.0",
-        "core-js": "3.6.5",
-        "node-sass": "4.13.1",
-        "nodemon": "2.0.3",
+        "webpackbar": "4.0.0",
         "onchange": "6.1.0",
-        "regenerator-runtime": "0.13.5",
-        "typescript": "3.8.3",
-        "underscore.string": "3.3.5",
-        "webpack": "4.42.1",
-        "webpack-cli": "3.3.11",
-        "webpackbar": "4.0.0"
+        "nodemon": "2.0.3"
     },
     "resolutions": {
         "@babel/preset-env": "7.8.0"
