--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
         "watchPackageClient": "onchange -k -i -d 250 \"./client/**/*.ts\" \"./client/**/*.tsx\" -- npm run packageClient"
     },
     "dependencies": {
+        "@apollo/react-hooks": "3.1.3",
+        "@babel/compat-data": "7.8.0",
+        "@babel/core": "7.8.6",
+        "@babel/preset-env": "7.8.0",
         "@microsoft/applicationinsights-web": "2.5.4",
         "@microsoft/microsoft-graph-client": "2.0.0",
         "@pnp/common": "2.0.4",
-        "@types/react-autosuggest": "9.3.13",
+        "@uifabric/icons": "7.3.27",
         "@uifabric/react-hooks": "^7.2.0",
+        "@uifabric/utilities": "7.6.0",
         "apollo-cache": "1.3.4",
         "apollo-cache-inmemory": "1.6.5",
         "apollo-client": "2.6.8",
@@ -30,10 +35,13 @@
         "array-sort": "1.0.0",
         "autosuggest-highlight": "3.1.1",
         "azure-storage": "2.10.3",
+        "babel-loader": "8.1.0",
         "chalk": "4.0.0",
+        "concurrently": "5.1.0",
         "connect-azuretables": "1.0.20",
         "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
+        "core-js": "3.6.5",
         "debug": "4.1.1",
         "dotenv": "8.2.0",
         "express": "4.17.1",
@@ -55,6 +63,7 @@
         "moment": "2.24.0",
         "morgan": "1.10.0",
         "node-fetch": "2.6.0",
+        "node-sass": "4.13.1",
         "office-ui-fabric-react": "7.106.3",
         "passport": "0.4.1",
         "passport-azure-ad": "4.2.1",
@@ -65,6 +74,7 @@
         "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
         "recharts": "^1.8.5",
+        "regenerator-runtime": "0.13.5",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
         "string-format": "2.0.0",
@@ -72,31 +82,20 @@
         "string-strip-html": "4.3.20",
         "supports-color": "7.1.0",
         "twix": "1.3.0",
+        "typescript": "3.8.3",
         "underscore": "1.9.1",
+        "underscore.string": "3.3.5",
         "uuid": "7.0.2",
         "validator": "13.0.0",
-        "with-default-props": "^0.2.1",
-        "@uifabric/icons": "7.3.27",
-        "@uifabric/utilities": "7.6.0",
-        "@apollo/react-hooks": "3.1.3",
-        "@babel/compat-data": "7.8.0",
-        "@babel/core": "7.8.6",
-        "@babel/preset-env": "7.8.0",
-        "babel-loader": "8.1.0",
-        "concurrently": "5.1.0",
-        "core-js": "3.6.5",
-        "node-sass": "4.13.1",
-        "regenerator-runtime": "0.13.5",
-        "typescript": "3.8.3",
-        "underscore.string": "3.3.5",
         "webpack": "4.42.1",
-        "webpack-cli": "3.3.11"
+        "with-default-props": "^0.2.1"
     },
     "devDependencies": {
         "@types/autosuggest-highlight": "3.1.0",
         "@types/get-value": "3.0.1",
         "@types/react": "16.9.34",
         "@types/react-autocomplete": "1.8.5",
+        "@types/react-autosuggest": "9.3.13",
         "@types/react-dom": "16.9.6",
         "@types/recharts": "^1.8.10",
         "@types/scriptjs": "0.0.2",
@@ -104,9 +103,9 @@
         "@types/underscore.string": "0.0.38",
         "@types/validator": "13.0.0",
         "@types/webpack-env": "1.15.1",
-        "webpackbar": "4.0.0",
+        "nodemon": "2.0.3",
         "onchange": "6.1.0",
-        "nodemon": "2.0.3"
+        "webpackbar": "4.0.0"
     },
     "resolutions": {
         "@babel/preset-env": "7.8.0"
