--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "node": ">=10.14.1",
         "npm": ">=6.5.0"
     },
+    "config": {
+        "client": "./lib/client"
+    },
     "scripts": {
         "watch": "concurrently \"npm run watchPackageClient\" \"npm run watchServer\" \"npm run watchStyles\"",
         "start": "node ./bin/www",
@@ -77,7 +80,6 @@
         "string-format": "2.0.0",
         "string-similarity": "4.0.1",
         "string-strip-html": "4.3.20",
-        "supports-color": "7.1.0",
         "twix": "1.3.0",
         "typescript": "3.8.3",
         "underscore": "1.9.1",
