Decreased dev build time to about 2-3s

--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "client": "./lib/client"
     },
     "scripts": {
-        "watch": "concurrently \"npm run watchPackageClient\" \"npm run watchServer\" \"npm run watchStyles\"",
         "start": "node ./bin/www",
+        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
-        "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
+        "watchClient": "tsc --watch",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
+        "buildClient": "tsc --build",
+        "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "packageClient": "tsc --build && webpack --config webpack.config.js",
-        "watchPackageClient": "onchange -k -i -d 250 \"./client/**/*.ts\" \"./client/**/*.tsx\" -- npm run packageClient",
         "makeDoc": "typedoc --options typedoc.json"
     },
     "dependencies": {
@@ -27,9 +28,6 @@
         "@microsoft/applicationinsights-web": "2.5.4",
         "@microsoft/microsoft-graph-client": "2.0.0",
         "@pnp/common": "2.0.4",
-        "@uifabric/icons": "7.3.27",
-        "@uifabric/react-hooks": "^7.2.0",
-        "@types/webpack-env": "1.15.1",        
         "@types/autosuggest-highlight": "3.1.0",
         "@types/get-value": "3.0.1",
         "@types/react": "16.9.34",
@@ -40,6 +38,9 @@
         "@types/underscore": "1.9.4",
         "@types/underscore.string": "0.0.38",
         "@types/validator": "13.0.0",
+        "@types/webpack-env": "1.15.1",
+        "@uifabric/icons": "7.3.27",
+        "@uifabric/react-hooks": "^7.2.0",
         "apollo-cache": "1.3.4",
         "apollo-cache-inmemory": "1.6.5",
         "apollo-client": "2.6.8",
@@ -107,6 +108,8 @@
         "onchange": "6.1.0",
         "typedoc": "^0.17.6",
         "typedoc-plugin-external-module-name": "3.1.0",
+        "webpack-dev-middleware": "3.7.2",
+        "webpack-hot-middleware": "2.25.0",
         "webpackbar": "4.0.0"
     },
     "resolutions": {
