--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
         "client": "./lib/client"
     },
     "scripts": {
-        "start": "node ./bin/www",
+        "start": "node ./dist/server",
         "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
         "watchClient": "tsc --watch",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
-        "buildClient": "tsc --build",
+        "buildClient": "tsc",
+        "buildServer": "tsc -p tsconfig.server.json",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
-        "packageClient": "tsc --build && webpack --config webpack.config.js",
+        "packageClient": "tsc && webpack --config webpack.config.js",
         "makeDoc": "typedoc --options typedoc.json"
     },
     "dependencies": {
@@ -30,6 +31,7 @@
         "@pnp/common": "2.0.4",
         "@types/autosuggest-highlight": "3.1.0",
         "@types/get-value": "3.0.1",
+        "@types/node": "13.13.4",
         "@types/react": "16.9.34",
         "@types/react-autosuggest": "9.3.13",
         "@types/react-dom": "16.9.6",
@@ -93,6 +95,7 @@
         "string-format": "2.0.0",
         "string-similarity": "4.0.1",
         "string-strip-html": "4.3.20",
+        "ts-node": "8.9.1",
         "twix": "1.3.0",
         "typescript": "3.8.3",
         "underscore": "1.9.1",
