--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
         "node": ">=10.14.1",
         "npm": ">=6.5.0"
     },
-    "config": {
-        "client": "./lib/client"
-    },
     "scripts": {
-        "start": "node ./dist/server",
-        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\"",
-        "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
-        "watchClient": "tsc --watch",
+        "start": "node ./dist",
+        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"npm run watchBuildServer\"",
+        "watchServer": "tsc --watch true -p tsconfig.server.json",
+        "watchBuildServer": "nodemon ./dist",
+        "watchClient": "tsc --watch true -p tsconfig.json",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
-        "buildClient": "tsc",
-        "buildServer": "tsc -p tsconfig.server.json",
+        "buildClient": "tsc -p tsconfig.json",
+        "buildServer": "tsc -p tsconfig.server.json && node tasks/copyStaticAssets",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "packageClient": "tsc && webpack --config webpack.config.js",
-        "makeDoc": "typedoc --options typedoc.json"
+        "makeDoc": "typedoc --options typedoc.json",
+        "webpack-test": "webpack"
     },
     "dependencies": {
         "@apollo/react-hooks": "3.1.3",
@@ -30,8 +29,17 @@
         "@microsoft/microsoft-graph-client": "2.0.0",
         "@pnp/common": "2.0.4",
         "@types/autosuggest-highlight": "3.1.0",
+        "@types/connect-flash": "0.0.35",
+        "@types/cookie-parser": "1.4.2",
+        "@types/express": "4.17.6",
         "@types/get-value": "3.0.1",
+        "@types/graphql": "14.5.0",
+        "@types/hbs": "4.0.1",
+        "@types/http-errors": "1.6.3",
+        "@types/morgan": "1.9.0",
         "@types/node": "13.13.4",
+        "@types/passport": "1.0.3",
+        "@types/passport-azure-ad": "4.0.5",
         "@types/react": "16.9.34",
         "@types/react-autosuggest": "9.3.13",
         "@types/react-dom": "16.9.6",
@@ -56,7 +64,6 @@
         "chalk": "4.0.0",
         "concurrently": "5.1.0",
         "connect-azuretables": "1.0.20",
-        "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
         "core-js": "3.6.5",
         "debug": "4.1.1",
@@ -91,6 +98,7 @@
         "recharts": "^1.8.5",
         "regenerator-runtime": "0.13.5",
         "scriptjs": "2.5.9",
+        "shelljs": "0.8.4",
         "simple-oauth2": "2.4.0",
         "string-format": "2.0.0",
         "string-similarity": "4.0.1",
