--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     },
     "scripts": {
         "start": "node ./dist",
+        "prewatch": "npm run buildServer",
         "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"npm run watchBuildServer\"",
         "watchServer": "tsc --watch true -p tsconfig.server.json",
         "watchBuildServer": "nodemon ./dist",
-        "watchClient": "tsc --watch true -p tsconfig.json",
+        "watchClient": "tsc --watch true -p tsconfig.client.json",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
-        "buildClient": "tsc -p tsconfig.json",
+        "buildClient": "tsc -p tsconfig.client.json",
         "buildServer": "tsc -p tsconfig.server.json && node tasks/copyStaticAssets",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "packageClient": "tsc && webpack --config webpack.config.js",
