--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
     },
     "scripts": {
         "start": "node ./dist",
-        "prewatch": "npm run buildServer",
-        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"npm run watchBuildServer\"",
-        "watchServer": "tsc --watch true -p tsconfig.server.json",
-        "watchBuildServer": "nodemon ./dist",
+        "watch": "concurrently \"npm run watchServer\" \"npm run watchClient\" \"npm run watchStyles\"",
+        "watchServer": "tsc-watch --onSuccess \"node ./bin\"",
         "watchClient": "tsc --watch true -p tsconfig.client.json",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
         "buildClient": "tsc -p tsconfig.client.json",
-        "buildServer": "tsc -p tsconfig.server.json && node tasks/copyStaticAssets",
-        "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
+        "packageStyles": "node-sass --include-path scss scss/main.scss bin/public/css/main.css",
         "packageClient": "tsc && webpack --config webpack.config.js",
-        "makeDoc": "typedoc --options typedoc.json",
-        "webpack-test": "webpack"
+        "makeDoc": "typedoc --options typedoc.json"
     },
     "dependencies": {
         "@apollo/react-hooks": "3.1.3",
@@ -65,6 +61,7 @@
         "chalk": "4.0.0",
         "concurrently": "5.1.0",
         "connect-azuretables": "1.0.20",
+        "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
         "core-js": "3.6.5",
         "debug": "4.1.1",
@@ -118,6 +115,7 @@
     "devDependencies": {
         "nodemon": "2.0.3",
         "onchange": "6.1.0",
+        "tsc-watch": "^4.2.3",
         "typedoc": "^0.17.6",
         "typedoc-plugin-external-module-name": "3.1.0",
         "webpack-dev-middleware": "3.7.2",
