--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,5 @@
       "*": ["node_modules/*", "server/types/*"]
     }
   },
-  "include": ["server/**/*"]
+  "include": ["server/**/*", "graphql/**/*"]
 }
