--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "helmet": "3.21.2",
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
+        "lodash": "4.17.15",
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
