--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "graphql-tools": "5.0.0",
         "hbs": "4.1.1",
         "helmet": "3.21.2",
+        "hotkeys-js": "3.7.6",
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
         "lodash": "4.17.15",
@@ -85,6 +86,7 @@
         "react-apollo": "3.1.5",
         "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
+        "react-hot-keys": "2.5.2",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
