--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/react": "16.9.34",
         "@types/react-autosuggest": "9.3.13",
         "@types/react-dom": "16.9.6",
+        "@types/react-router-dom": "5.1.5",
         "@types/recharts": "^1.8.10",
         "@types/scriptjs": "0.0.2",
         "@types/underscore": "1.9.4",
