--- a/.github/workflows/pr_tests.yml
+++ b/.github/workflows/pr_tests.yml
@@ -26,3 +26,5 @@ jobs:
           npm test
         env:
           NODE_ENV: production
+          CI: true
+          AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_DEV_CONNECTION_STRING }}
