Added support for env SESSION_SAVE_UNINITIALIZED

--- a/.github/workflows/pr_tests.yml
+++ b/.github/workflows/pr_tests.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           NODE_ENV: production
           CI: true
+          SESSION_SAVE_UNINITIALIZED: true
           AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_DEV_CONNECTION_STRING }}
           OAUTH_APP_ID: 00000000-0000-0000-0000-000000000000
           OAUTH_APP_PASSWORD: 00000000-0000-0000-0000-000000000000
