--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "buildClient": "tsc --build",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "packageClient": "tsc --build && webpack --config webpack.config.js",
+        "lint": "eslint --ext .ts,.tsx ./client --color --fix",
         "makeDoc": "typedoc --options typedoc.json"
     },
     "dependencies": {
@@ -104,6 +105,10 @@
         "with-default-props": "^0.2.1"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "2.30.0",
+        "@typescript-eslint/parser": "2.30.0",
+        "eslint": "6.8.0",
+        "eslint-plugin-react": "7.19.0",
         "nodemon": "2.0.3",
         "onchange": "6.1.0",
         "typedoc": "^0.17.6",
