--- a/.github/workflows/pr_install_package_frontend_build.yml
+++ b/.github/workflows/pr_install_package_frontend_build.yml
@@ -14,15 +14,16 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          # Checkout the head ref instead of the PR branch that github creates.
           ref: ${{ github.head_ref }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install and build
+      - name: Install npm packages
         run: |
-          npm install --production --no-progress --loglevel silent --no-shrinkwrap --no-fund     
+          npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
+      - name: Package client JS
+        run: |
           npm run packageClient
         env:
           NODE_ENV: production
