--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react": "16.13.1",
         "react-apollo": "3.1.5",
         "react-autosuggest": "10.0.0",
+        "react-color": "2.18.0",
         "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
