--- a/.github/workflows/pr_install_package_frontend_build.yml
+++ b/.github/workflows/pr_install_package_frontend_build.yml
@@ -27,3 +27,6 @@ jobs:
           npm run packageClient
         env:
           NODE_ENV: production
+      - name: Package client CSS
+        run: |
+          npm run packageStyles
