--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
         "@typescript-eslint/parser": "2.30.0",
         "eslint": "6.8.0",
         "eslint-plugin-react": "7.19.0",
+        "livereload": "0.9.1",
         "nodemon": "2.0.3",
         "onchange": "6.1.0",
         "rimraf": "3.0.2",
@@ -116,7 +117,6 @@
         "typedoc-neo-theme": "1.0.8",
         "typedoc-plugin-external-module-name": "3.1.0",
         "webpack-dev-middleware": "3.7.2",
-        "webpack-hot-middleware": "2.25.0",
         "webpackbar": "4.0.0"
     },
     "resolutions": {
