--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"elivereload ./public/js -w 1000 -d\"",
+        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"livereload ./public/js -w 1000 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
         "watchClient": "tsc --watch",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
