--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"npm run watchClient\" \"npm run watchServer\" \"npm run watchStyles\" \"livereload ./public/js -w 1000 -d\"",
+        "watch": "concurrently \"webpack --watch\" \"npm run watchServer\" \"npm run watchStyles\" \"livereload ./public/js -w 1000 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
-        "watchClient": "tsc --watch",
         "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
-        "buildClient": "tsc --build",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
-        "packageClient": "tsc --build && webpack --config webpack.config.js",
+        "packageClient": "webpack",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
         "makeDoc": "rimraf.cmd ./doc && typedoc --options typedoc.json"
     },
@@ -94,6 +92,7 @@
         "string-format": "2.0.0",
         "string-similarity": "4.0.1",
         "string-strip-html": "4.3.20",
+        "ts-loader": "7.0.2",
         "twix": "1.3.0",
         "typescript": "3.8.3",
         "underscore": "1.9.1",
