tsconfig: declaration/sourceMap = false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       "module": "esnext",
       "moduleResolution": "node",
       "jsx": "react",
-      "declaration": true,
-      "sourceMap": true,
+      "declaration": false,
+      "sourceMap": false,
       "experimentalDecorators": true,
       "downlevelIteration": true,
       "noImplicitAny": false,
