--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"webpack --watch\" \"npm run watchServer\" \"npm run watchStyles\" \"livereload ./public/js -w 1000 -d\"",
+        "watch": "concurrently \"webpack --watch\" \"npm run watchServer\"  \"livereload ./public/js -w 1000 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
-        "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
         "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "packageClient": "webpack",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
@@ -54,6 +53,8 @@
         "connect-flash": "0.1.1",
         "cookie-parser": "~1.4.4",
         "core-js": "3.6.5",
+        "css-loader": "3.5.3",
+        "css-modules-typescript-loader": "4.0.0",
         "debug": "4.1.1",
         "dotenv": "8.2.0",
         "express": "4.17.1",
@@ -87,11 +88,13 @@
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
         "regenerator-runtime": "0.13.5",
+        "sass-loader": "8.0.2",
         "scriptjs": "2.5.9",
         "simple-oauth2": "2.4.0",
         "string-format": "2.0.0",
         "string-similarity": "4.0.1",
         "string-strip-html": "4.3.20",
+        "style-loader": "1.2.1",
         "ts-loader": "7.0.2",
         "twix": "1.3.0",
         "typescript": "3.8.3",
