--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"webpack --watch\" \"npm run watchServer\"  \"livereload ./public/js -w 1000 -d\"",
+        "watch": "concurrently \"npm run watchStyles\" \"webpack --watch\" \"npm run watchServer\"  \"livereload ./public/js -w 1000 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
-        "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
+        "watchStyles": "onchange -k -i -d 250 \"./**/*.scss\" -- npm run packageStyles",
         "packageClient": "webpack",
+        "packageStyles": "node-sass --include-path scss scss/main.scss public/css/main.css",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
         "makeDoc": "rimraf.cmd ./doc && typedoc --options typedoc.json"
     },
