--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "react-apollo": "3.1.5",
         "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
+        "react-hot-keys": "2.5.2",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
