Installed SCSS packages and remove scss scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
     "views": false,
     "services": false,
     ".env": false,
-    "server.js": true
-  },
+    "server.js": true,
+    "client/**/*.d.ts": true,
+    "client/**/*js": true,
+    "client/**/*js.map": true
+  }
 }
