Added declarations.d.ts so we can use SCSS modules

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ package-lock.json
 
 azcopy/
 client/**/*.d.ts
-!client/**/*scss.d.ts
 client/**/*js
 client/**/*js.map
+!client/**/*scss.d.ts
+!client/declarations.d.ts
