--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,4 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "server.js",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\server.js",
-            "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "NODE_ENV": "development",
-                "DEBUG": "services*"
-            },
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": []
 }
