--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "start": "node ./bin/www",
-        "watch": "concurrently \"webpack --watch\" \"npm run watchServer\" \"livereload ./public/js -w 1000 -d\"",
+        "watch": "concurrently \"webpack && webpack --watch\" \"npm run watchServer\" \"livereload ./public/js -w 1000 -d\"",
         "watchServer": "nodemon --ignore client --ignore public --ignore lib ./bin/www",
         "packageClient": "webpack",
         "lint": "eslint --ext .ts,.tsx ./client --color --fix",
@@ -74,6 +74,7 @@
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
         "moment": "2.24.0",
+        "moment-locales-webpack-plugin": "1.2.0",
         "morgan": "1.10.0",
         "node-fetch": "2.6.0",
         "node-sass": "4.13.1",
