--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "helmet": "3.21.2",
         "http-errors": "1.7.3",
         "i18next": "19.3.4",
+        "install": "0.13.0",
         "lodash": "4.17.15",
         "loglevel": "1.6.7",
         "loglevel-plugin-prefix": "0.8.4",
@@ -85,6 +86,7 @@
         "react-apollo": "3.1.5",
         "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
+        "react-fade-in": "1.0.0",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
