Initial support for hotkeys using GlobalHotKeys

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "react-color": "2.18.1",
         "react-dom": "16.13.1",
         "react-fade-in": "1.0.0",
+        "react-hotkeys": "2.0.0",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
