--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "clean": "rimraf ./lib && rimraf ./public/js"
     },
     "dependencies": {
+        "@apollo/react-common": "3.1.3",
         "@apollo/react-hooks": "3.1.3",
         "@microsoft/applicationinsights-web": "2.5.4",
         "@microsoft/microsoft-graph-client": "2.0.0",
@@ -45,7 +46,7 @@
         "express-pino-logger": "4.0.0",
         "express-session": "1.17.1",
         "get-value": "3.0.1",
-        "graphql": "14.3.1",
+        "graphql": "14.4.1",
         "graphql-import": "1.0.2",
         "graphql-tag": "2.10.3",
         "graphql-tools": "5.0.0",
@@ -63,7 +64,6 @@
         "passport-azure-ad": "4.2.1",
         "pino": "6.2.0",
         "react": "16.13.1",
-        "react-apollo": "3.1.5",
         "react-autosuggest": "10.0.0",
         "react-dom": "16.13.1",
         "react-markdown": "4.3.1",
