--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "webpack": "webpack"
     },
     "dependencies": {
+        "@apollo/react-common": "3.1.3",
         "@apollo/react-hooks": "3.1.3",
         "@babel/compat-data": "7.8.0",
         "@babel/core": "7.8.6",
@@ -35,12 +36,12 @@
         "@types/webpack-env": "1.15.1",
         "@uifabric/icons": "7.3.27",
         "@uifabric/react-hooks": "^7.2.0",
-        "apollo-cache": "1.3.4",
-        "apollo-cache-inmemory": "1.6.5",
-        "apollo-client": "2.6.8",
-        "apollo-link": "1.2.13",
+        "apollo-cache": "1.3.5",
+        "apollo-cache-inmemory": "1.6.6",
+        "apollo-client": "2.6.9",
+        "apollo-link": "1.2.14",
         "apollo-link-http": "1.5.17",
-        "apollo-utilities": "1.3.3",
+        "apollo-utilities": "1.3.4",
         "array-sort": "1.0.0",
         "azure-storage": "2.10.3",
         "babel-loader": "8.1.0",
@@ -56,10 +57,10 @@
         "dotenv": "8.2.0",
         "express": "4.17.1",
         "express-favicon": "2.0.1",
-        "express-graphql": "0.8.0",
+        "express-graphql": "0.9.0",
         "express-session": "1.17.1",
         "get-value": "3.0.1",
-        "graphql": "14.3.1",
+        "graphql": "14.4.1",
         "graphql-import": "1.0.2",
         "graphql-tag": "2.10.3",
         "graphql-tools": "5.0.0",
@@ -80,7 +81,6 @@
         "passport": "0.4.1",
         "passport-azure-ad": "4.2.1",
         "react": "16.13.1",
-        "react-apollo": "3.1.5",
         "react-color": "2.18.1",
         "react-dom": "16.13.1",
         "react-fade-in": "1.0.0",
