--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "react-dom": "16.13.1",
         "react-fade-in": "1.0.0",
         "react-hotkeys": "2.0.0",
+        "react-i18next": "11.4.0",
         "react-markdown": "4.3.1",
         "react-router-dom": "5.1.2",
         "recharts": "^1.8.5",
