Minor adjusments to timesheet.utils

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "client/**/*.d.ts": true,
     "client/**/*js": true,
     "client/**/*js.map": true
-  }
+  },
+  "javascript.validate.enable": false
 }
