Added prettier:server script

--- a/.github/workflows/pr_install_package_frontend_build.yml
+++ b/.github/workflows/pr_install_package_frontend_build.yml
@@ -24,6 +24,6 @@ jobs:
           npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
       - name: Package client JS
         run: |
-          npm run packageClient
+          npm run package:client
         env:
           NODE_ENV: production
