--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,13 +14,12 @@
     "server.js": true,
     "client/**/*.d.ts": true,
     "client/**/*js": true,
-    "client/**/*js.map": true,
-    "resources": true
+    "client/**/*js.map": true
   },
   "javascript.validate.enable": false,
   "debug.node.autoAttach": "on",
   "i18n-ally.localesPaths": "./resources",
   "i18n-ally.keystyle": "nested",
-  "i18n-ally.sourceLanguage": "en-GB",
+  "i18n-ally.sourceLanguage": "nb",
   "i18n-ally.displayLanguage": "en-GB"
 }
