Added ability to configure webpack notifications using .env

--- a/sample.env
+++ b/sample.env
@@ -13,3 +13,6 @@ NODE_ENV=development
 OAUTH_RESPONSE_TYPE=code id_token
 OAUTH_RESPONSE_MODE=form_post
 OAUTH_SIGNIN_PROMPT=select_account
+WEBPACK_NOTIFICATIONS_SUPPRESSSUCCESS=true
+WEBPACK_NOTIFICATIONS_SHOWDURATION=true
+WEBPACK_NOTIFICATIONS_SOUND=growl
