--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
     "server.js": true,
     "client/**/*.d.ts": true,
     "client/**/*js": true,
-    "client/**/*js.map": true
+    "client/**/*js.map": true,
+    "public/graphdoc": true,
+    "public/js": true
   },
   "javascript.validate.enable": false,
   "debug.node.autoAttach": "on",
