--- a/sample.env
+++ b/sample.env
@@ -16,3 +16,4 @@ OAUTH_SIGNIN_PROMPT=select_account
 WEBPACK_NOTIFICATIONS_SUPPRESSSUCCESS=true
 WEBPACK_NOTIFICATIONS_SHOWDURATION=true
 WEBPACK_NOTIFICATIONS_SOUND=growl
+TESTS_AZURE_STORAGE_CONNECTION_STRING=##Insert CS##
