--- a/sample.env
+++ b/sample.env
@@ -17,3 +17,4 @@ WEBPACK_NOTIFICATIONS_SUPPRESSSUCCESS=true
 WEBPACK_NOTIFICATIONS_SHOWDURATION=true
 WEBPACK_NOTIFICATIONS_SOUND=growl
 TESTS_AZURE_STORAGE_CONNECTION_STRING=##Insert CS##
+LOCALTUNNEL_SUBDOMAIN=
