disable touch callout (i.e. "define [word]" for iOS)

--- a/public/sitemanifest.json
+++ b/public/sitemanifest.json
@@ -17,6 +17,6 @@
     ],
     "start_url":"/",
     "scope":"/",
-    "theme_color": "#cf5f00",
-    "background_color": "#ffffff"
+    "theme_color": "#CF5F00",
+    "background_color": "#FFFFFF"
 }
