Made mocha tests run in TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "lib": ["es2018", "esnext.asynciterable"],
     "baseUrl": "./",
     "typeRoots": ["./node_modules/@types"],
-    "types": ["express"],
+    "types": ["express", "node", "mocha"],
     "outDir": "server-dist"
   },
   "include": ["server/**/*.ts"],
