--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:server": "tsc --project tsconfig.json",
     "lint": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts' --write",
-    "tests": "mocha tests --exit",
+    "tests": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "create-env": "node tasks/create-dot-env.js"
   },
   "dependencies": {
@@ -116,6 +116,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "8.0.3",
     "@types/morgan": "^1.9.2",
     "@types/passport": "^1.0.4",
     "@types/string-similarity": "^3.0.0",
